--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-pyside>=1.2.1
-h5py>=2.2.0b1
-matplotlib>=1.3.0
-numpy>=1.7.1
-pyqtgraph>=0.9.7
-scipy>=0.12.0
+pyside==1.2.1
+h5py==2.2.1
+matplotlib==1.3.1
+numpy==1.8.0
+pyqtgraph==0.9.8
+scipy==0.13.3
+arf==2.2.0
+libtfr==1.0.3
